@@ -1,11 +1,13 @@
 package com.example.demo.service;
 
 import com.example.demo.dto.RelatorioAluguelDTO;
+import com.example.demo.model.Aluguel;
 import com.example.demo.repository.AluguelRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,22 +18,20 @@ public class RelatorioService {
     private AluguelRepository aluguelRepository;
 
     public List<RelatorioAluguelDTO> gerarRelatorioAlugueis(LocalDate startDate, LocalDate endDate) {
-        return aluguelRepository.findByDataInicioBetween(startDate, endDate)
+        return new ArrayList<>(aluguelRepository.findByDataInicioBetween(startDate, endDate)
                 .stream()
                 .collect(Collectors.groupingBy(
-                        aluguel -> aluguel.getMoto(),
+                        Aluguel::getMoto,
                         Collectors.collectingAndThen(
                                 Collectors.toList(),
                                 alugueis -> new RelatorioAluguelDTO(
-                                        alugueis.get(0).getMoto().getModelo(),
-                                        alugueis.get(0).getMoto().getMarca(),
-                                        alugueis.get(0).getMoto().getPlaca(),
+                                        alugueis.getFirst().getMoto().getModelo(),
+                                        alugueis.getFirst().getMoto().getMarca(),
+                                        alugueis.getFirst().getMoto().getPlaca(),
                                         alugueis.size()
                                 )
                         )
                 ))
-                .values()
-                .stream()
-                .collect(Collectors.toList());
+                .values());
     }
 }
